--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="row ipad-width">
 			<div class="left-content">
 				<a href="index.html"><img class="md-logo" src="images/logo1.svg" alt="" width="119" height="58"></a>
-				<h1>Coming soon</h1>
+				<h1>Coming on 01/10/2020</h1>
 				<div class="row">
 					<div  class="col-md-6 col-sm-12 col-xs-12">
 						<div class="coming-ct">
