--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<style type="text/css">
 		*{
-			font-family: 'Nunito';
+			font-family: 'Dosis';
 		}
 	</style>
 </head>
