--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<link rel="stylesheet" href="css/plugins.css">
 	<link rel="stylesheet" href="css/style.css">
 	<style type="text/css">
-		*{
-			font-family: 'Nunito';
-		}
+	*{
+		font-family: 'Roboto';
+	}
 	</style>
 </head>
 <body>
