--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="profile" href="#">
 
     <!--Google Font-->
-    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600' />
+    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Sofia|Nunito:300,400,600' />
 	<!-- Mobile specific meta -->
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone-no">
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<style type="text/css">
 	*{
-		font-family: 'Roboto';
+		font-family: 'Sofia';
 	}
 	</style>
 </head>
