--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="profile" href="#">
 
     <!--Google Font-->
-    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Sofia|Nunito:300,400,600' />
+    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600' />
 	<!-- Mobile specific meta -->
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone-no">
@@ -18,9 +18,9 @@
 	<link rel="stylesheet" href="css/plugins.css">
 	<link rel="stylesheet" href="css/style.css">
 	<style type="text/css">
-	*{
-		font-family: 'Sofia';
-	}
+		*{
+			font-family: 'Dosis';
+		}
 	</style>
 </head>
 <body>
@@ -44,21 +44,21 @@
 						<div class="coming-ct">
 							<div id="clockdiv" class="time">
 								<div class="it-time">
-									<span style="color: white"  class="days"></span><br>
+									<span style="color: white" id="days" class="days"></span><br>
 									<p style="color: #00b5ff;font-weight: bold;">days</p>
 								</div>
 								
 								<div class="it-time">
-									<span style="color: white" class="hours"></span><br>		
+									<span style="color: white" id="hours" class="hours"></span><br>		
 									<p style="color: #00b5ff;font-weight: bold;">hours</p>
 								</div>
 								<div class="it-time">
-									<span style="color: white" class="minutes">				
+									<span style="color: white" id="minutes" class="minutes">				
 									</span><br>	
 									<p style="color: #00b5ff;font-weight: bold;">Minutes</p>
 								</div>
 								<div class="it-time">
-									<span style="color: white" class="seconds">							
+									<span style="color: white" id="seconds" class="seconds">							
 									</span><br>
 									<p style="color: #00b5ff;font-weight: bold;">Seconds</p>
 								</div>
