--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 							<input class="redbtn" type="submit" placeholder="subscribe">
 						</form> -->
 					</div>
-					<!-- <div class="col-md-6 col-sm-12 col-xs-12">
-						<img class="cm-img" src="images/uploads/cm-img.png" alt="">
-					</div> -->
+					<div class="col-md-6 col-sm-12 col-xs-12">
+						<img class="cm-img" src="images/uploads/cm-img.png" alt="" >
+					</div>
 				</div>
 				
 			</div>
