--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
 							<div id="clockdiv" class="time">
 								<div class="it-time">
 									<span style="color: white" id="days" class="days"></span><br>
-									<p style="color: #00b5ff;font-weight: bold;">days</p>
+									<p style="color: #00b5ff;font-weight: bold;font-family: 'Dosis';">days</p>
 								</div>
 								
 								<div class="it-time">
 									<span style="color: white" id="hours" class="hours"></span><br>		
-									<p style="color: #00b5ff;font-weight: bold;">hours</p>
+									<p style="color: #00b5ff;font-weight: bold;font-family: 'Dosis';">hours</p>
 								</div>
 								<div class="it-time">
 									<span style="color: white" id="minutes" class="minutes">				
 									</span><br>	
-									<p style="color: #00b5ff;font-weight: bold;">Minutes</p>
+									<p style="color: #00b5ff;font-weight: bold;font-family: 'Dosis';">Minutes</p>
 								</div>
 								<div class="it-time">
 									<span style="color: white" id="seconds" class="seconds">							
 									</span><br>
-									<p style="color: #00b5ff;font-weight: bold;">Seconds</p>
+									<p style="color: #00b5ff;font-weight: bold;font-family: 'Dosis';">Seconds</p>
 								</div>
 							</div>	
 						</div>
