--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 	<link rel="stylesheet" href="css/plugins.css">
 	<link rel="stylesheet" href="css/style.css">
 	<style type="text/css">
-		*{
-			font-family: 'Dosis';
+		@font-face {
+		  font-family: Dosis;
+		  src: url(fonts/Dosis/Dosis-Regular.ttf) format('truetype');
+		}
+		body {
+			font-family: Dosis;
 		}
 	</style>
 </head>
