--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<style type="text/css">
 		@font-face {
 		  font-family: Dosis;
-		  src: url('fonts/Dosis/Dosis-Bold.ttf') format('truetype');
+		  src: url('fonts/Dosis/Dosis-Regular.ttf') format('truetype');
 		}
 		body {
 			font-family: Dosis;
