--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="">
 	<link rel="profile" href="#">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
     <!--Google Font-->
     <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600' />
+
 	<!-- Mobile specific meta -->
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone-no">
+	
 	<!-- CSS files -->
 	<link rel="stylesheet" href="css/plugins.css">
 	<link rel="stylesheet" href="css/style.css">
