--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						</form> -->
 					</div>
 					<div class="col-md-6 col-sm-12 col-xs-12">
-						<img class="cm-img" src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg" alt="" >
+						<img class="cm-img" src="images/uploads/cm-img" alt="" >
 					</div>
 				</div>
 				
