--- a/json.html
+++ b/json.html
@@ -11,7 +11,7 @@
     	$(document).ready(function () {
     		var apikey = "fe3e4778";
     		var movie = "Dunkirk";
-    		var finalURL = "http://www.omdbapi.com/?apikey=" + apikey + "&t=" + movie;
+    		var finalURL = "https://www.omdbapi.com/?apikey=" + apikey + "&t=" + movie;
 			$.ajax({
 				url: finalURL,
 				success: function (data) {
