--- a/json.html
+++ b/json.html
@@ -14,10 +14,7 @@
     	var finalURL = "http://www.omdbapi.com/?apikey=" + apikey + "&t=" + movie;
 	    $.getJSON(finalURL, function(data) {
 	        
-	        var text = `Title: ${data.Title}<br>
-	                    Year: ${data.Year}<br>
-	                    IMDB : ${data.imdbRating} <br>
-	                    Source : ${data.Ratings[0]['Value']}`
+	        var text = `<img src=${data.Poster}>`
 	                    
 	        console.log(data.Ratings[0]['Value']);
 	        $(".mypanel").html(text);
