--- a/json.html
+++ b/json.html
@@ -8,7 +8,7 @@
 <body>
     <div class="mypanel"></div>
     <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg">
-    <script>
+    <!-- <script>
     	var apikey = "fe3e4778";
     	var movie = "Dunkirk";
     	var finalURL = "http://www.omdbapi.com/?apikey=" + apikey + "&t=" + movie;
@@ -19,7 +19,7 @@
 	        console.log(data.Ratings[0]['Value']);
 	        $(".mypanel").html(text);
 	    });
-    </script>
+    </script> -->
     
 </body>
 </html>
